<?xml version="1.0"?>
<package format="3">
  <name>lab_6</name>
  <version>0.0.0</version>
  <description>VNAV Lab 6 package</description>

  <maintainer email="you@example.com">TEAM_7</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>vision_msgs</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>ultralytics_ros</depend>

  <depend>gtsam</depend>
  <depend>glog</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
